--- a/Unit 1/Index.html
+++ b/Unit 1/Index.html
@@ -8,6 +8,7 @@
 	<h1>Ty Gilhuly </h1>
 	<h2> About me </h2>
 	<p>I am a College student attending the University of Michigan. I am studying Biology. </p>
+	<p>I am a college student attending the University of Michigan. I am studying Biology and hope to learn a thing or two about coding. </p>
 	<p>You can add me on <a href="https://www.facebook.com/ThompsonYoungg?"> Facebook </a> or send me an <a href="mailto:tygilhuly@me.com">email</a> </p>
 
 </body>
